--- a/Index.html
+++ b/Index.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trackgenix SA</title>
-    <layout>
-        <header>
-            <h1>Trackgenix SA<img src="C:\Users\User\Desktop\BaSP-M2022-Etapa-1\Semana-01\Images" alt="G"</h1>
-            <h2>Subheader</h2>
-        </header>
-        <sidebar>
-            <ul><strong>Menu</strong>
-                <li>Home</li>
-                <li>SingUp</li>
-                <li>LogIn</li>
-                <li>Contact</li>
-            </ul>
-            <ul><strong>Get in touch</strong>
-                <li>Worked hours</li>
-                <li>Report</li>
-                <li>Management</li>
-                <li>Rols</li>
-            </ul>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Trackgenix SA</title>
+    </head>
+    <body>
+        <layout>
+            <header>
+                <P>Menu <h1>Trackgenix SA</h1> <a href="https://www.facebook.com/">FB</a> <a href="https://twitter.com/">TW</a> 
+                    <a href="https://www.linkedin.com/">LK</a> <a href="https://www.instagram.com/">IG</a> 
+                    <a href="https://github.com/">GH</a>
+                </P>
+            </header>
+            <sidebar>
+                <p><strong>Menu</strong></p>
+                <ul>
+                    <li>Home</li>
+                    <li>SingUp</li>
+                    <li>LogIn</li>
+                    <li>Contact</li>
+                </ul>
+                <p><strong>Get in touch</strong></p>
+                <ul>
+                    <li>Worked hours</li>
+                    <li>Report</li>
+                    <li>Management</li>
+                    <li>Rols</li>
+                </ul>
             <h3><strong>Trackgenix</strong></h3>
             <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley 
             of type and scrambled it to make a type specimen book.
             </p>
         </sidebar>
     </layout>
-
-    </head>
-<body>
     
 </body>
 </html>
