added Home page

--- a/Index.html
+++ b/Index.html
@@ -29,12 +29,27 @@
                     <li>Management</li>
                     <li>Rols</li>
                 </ul>
-            <h3><strong>Trackgenix</strong></h3>
-            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley 
-            of type and scrambled it to make a type specimen book.
+                <h3><strong>Trackgenix</strong></h3>
+                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley 
+                of type and scrambled it to make a type specimen book.
+                </p>
+            </sidebar>
+        </layout>
+        <home>
+            <h2>Hi, we are Trackgenix SA</h2>
+            <h3>A FREE AND FULLY RESPONSIBE SITE</h3>
+            <p>Scelerisque augue scelerisque pharetra, platea rutrum. Orci est faucibus tempor pellentesque vulputate.
+                 Arcu in cras iaculis scelerisque odio venenatis magna nisl. Suspendisse maecenas ac sit urna neque
+                  eu amet, cras. Vel amet, id accumsan fringilla. Eros, habitant tortor quam consequat hendrerit nunc, euismod dolor. Tortor, quam velit sit tincidunt turpis viverra. Sapien rhoncus neque, varius facilisi pretium, volutpat non. Molestie proin placerat ultrices rhoncus massa scelerisque hac vel aliquam. Accumsan massa accumsan est a. Purus massa condimentum nam non ultricies eleifend. Orci, augue mauris tincidunt ullamcorper elementum in fringilla.
+                Sed varius nibh scelerisque tortor sapien. Sit egestas ac imperdiet lorem massa, tempor malesuada.
+                 Massa enim interdum morbi nunc eleifend viverra. Mauris iaculis arcu platea ut massa ultrices.
+                  In est porta etiam a nisl quisque nullam. Interdum vel, pellentesque imperdiet lacus fermentum.
+                   Consectetur amet, purus leo nulla. Ac mauris ac ultrices egestas maecenas suspendisse leo, mi.
             </p>
-        </sidebar>
-    </layout>
-    
-</body>
+            <img src="Images/G.jpg" alt="imagen de referencia">
+            <input type="button" value="Learn more">
+        </home>
+        
+
+    </body>
 </html>
