added history page

--- a/Index.html
+++ b/Index.html
@@ -49,7 +49,40 @@
             <img src="Images/G.jpg" alt="imagen de referencia">
             <input type="button" value="Learn more">
         </home>
-        
+        <History>
+            <p><img src="Images/G.jpg" alt="imagen de referenia">Lorem ipsum dolor sit amet, consectetur adipiscing
+                 elit. Sed id justo sed ante sollicitudin mollis. Nulla mauris lectus, hendrerit ac nulla ac,
+                  iaculis dictum leo. Sed ut auctor tellus, quis tincidunt magna. Nulla eros ipsum, blandit in
+                   sagittis ornare, convallis non orci. Nullam at ultrices lacus, sed aliquet ligula. Quisque
+                    posuere nibh nec enim porta, sit amet commodo purus gravida. Quisque quam elit, porta in purus
+                     a, ornare imperdiet magna. Sed vitae lacinia orci. Phasellus ut venenatis ante. Proin tristique
+                      malesuada urna ac tincidunt. 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id justo sed ante sollicitudin mollis.
+                 Nulla mauris lectus, hendrerit ac nulla ac, iaculis dictum leo. Sed ut auctor tellus, quis tincidunt
+                  magna. Nulla eros ipsum, blandit in sagittis ornare, convallis non orci. Nullam at ultrices lacus,
+                   sed aliquet ligula. Quisque posuere nibh nec enim porta, sit amet commodo purus gravida. Quisque
+                    quam elit, porta in purus a, ornare imperdiet magna. Sed vitae lacinia orci. Phasellus ut venenatis
+            </p>
+            <p>id justo sed ante sollicitudin mollis. Nulla mauris lectus, hendrerit ac nulla ac, iaculis dictum leo.
+                 Sed ut auctor tellus, quis tincidunt magna. Nulla eros ipsum, blandit in sagittis ornare, convallis
+                  non orci. Nullam at ultrices lacus, sed aliquet ligula. Quisque posuere nibh nec enim porta, sit amet
+                   commodo purus gravida. Quisque quam
+            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id justo sed ante sollicitudin mollis.
+                 Nulla mauris lectus, hendrerit ac nulla ac, iaculis dictum leo. Sed ut auctor tellus, quis tincidunt
+                  magna. Nulla eros ipsum, blandit in sagittis ornare, convallis non orci. Nullam at ultrices lacus,
+                   sed aliquet ligula. Quisque posuere nibh nec enim porta, sit amet commodo purus gravida. Quisque
+                    quam elit, porta in purus a, ornare imperdiet magna. Sed vitae lacinia orci. Phasellus ut venenatis
+                     ante. Proin tristique malesuada urna ac tincidunt. 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id justo sed ante sollicitudin mollis.
+                 Nulla mauris lectus, hendrerit ac nulla ac, iaculis dictum leo. Sed ut auctor tellus, quis tincidunt
+                  magna. Nulla eros ipsum, blandit in sagittis ornare, convallis non orci. Nullam at ultrices lacus,
+                   sed aliquet ligula. Quisque posuere nibh nec enim porta, sit amet commodo purus gravida. Quisque quam
+                    elit, porta in purus a, ornare imperdiet magna. Sed vitae lacinia orci. Phasellus ut venenatis
+                    <img src="Images/G.jpg" alt="imagen de referencia">
+            </p>
+        </History>
+
 
     </body>
 </html>
