added Functionalities page

--- a/Index.html
+++ b/Index.html
@@ -82,6 +82,26 @@
                     <img src="Images/G.jpg" alt="imagen de referencia">
             </p>
         </History>
+        <funcionalities>
+            <p><img src="Images/G.jpg" alt="imagen de referencia"><h2>Record of worked hours</h2>Lorem Ipsum is
+                 simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
+                   it to make a type.
+            </p>
+            <p><img src="Images/G.jpg" alt="imagen de referencia"><h2>Reports</h2>Lorem Ipsum is simply dummy text of
+                 the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
+                  since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.
+            </p>
+            <p><img src="Images/G.jpg" alt="imagen de referencia"><h2>Resources management</h2>Lorem Ipsum is simply
+                 dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                  text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
+                   type.
+            </p>
+            <p><img src="Images/G.jpg" alt="imagen de referencia"><h2>Multiple roles</h2>Lorem Ipsum is simply dummy
+                 text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
+                  ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.
+            </p>
+        </funcionalities>
 
 
     </body>
