--- a/Index.html
+++ b/Index.html
@@ -83,25 +83,34 @@
             </p>
         </History>
         <funcionalities>
-            <p><img src="Images/G.jpg" alt="imagen de referencia"><h2>Record of worked hours</h2>Lorem Ipsum is
+            <p><h2>Functionalities</h2></p>
+            <p><img src="Images/G.jpg" alt="imagen de referencia"><h3>Record of worked hours</h3>Lorem Ipsum is
                  simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
                   standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
                    it to make a type.
             </p>
-            <p><img src="Images/G.jpg" alt="imagen de referencia"><h2>Reports</h2>Lorem Ipsum is simply dummy text of
+            <p><img src="Images/G.jpg" alt="imagen de referencia"><h3>Reports</h3>Lorem Ipsum is simply dummy text of
                  the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
                   since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.
             </p>
-            <p><img src="Images/G.jpg" alt="imagen de referencia"><h2>Resources management</h2>Lorem Ipsum is simply
+            <p><img src="Images/G.jpg" alt="imagen de referencia"><h3>Resources management</h3>Lorem Ipsum is simply
                  dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
                   text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
                    type.
             </p>
-            <p><img src="Images/G.jpg" alt="imagen de referencia"><h2>Multiple roles</h2>Lorem Ipsum is simply dummy
+            <p><img src="Images/G.jpg" alt="imagen de referencia"><h3>Multiple roles</h3>Lorem Ipsum is simply dummy
                  text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
                   ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.
             </p>
         </funcionalities>
+        <reasons>
+            <p><h2>Reasons why you need us</h2></p>
+            <p><img src="Images/G.jpg" alt="imagen de referencia"><h3>Productivity enhancer</h3>Lorem Ipsum is
+             simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+              dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
+               type.
+            </p>
+        </reasons>
 
 
     </body>
