--- a/Index.html
+++ b/Index.html
@@ -110,6 +110,11 @@
               dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
                type.
             </p>
+            <p><img src="Images/G.jpg" alt="imagen de referencia"><h3>Decision making</h3>Lorem Ipsum is simply dummy
+                 text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                  text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
+                   type.
+            </p>
         </reasons>
 
 
