added another <p> -Leadership and team management- and finished -reason why you need us- section

--- a/Index.html
+++ b/Index.html
@@ -119,6 +119,11 @@
                  text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
                   ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.
             </p>
+            <p><img src="Images/G.jpg" alt="imagen de referencia"><h3>Leadership and team management</h3>Lorem Ipsum is
+                 simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
+                   it to make a type.
+            </p>
         </reasons>
 
 
