added input radio for i am a human

--- a/Index.html
+++ b/Index.html
@@ -137,6 +137,7 @@
             <form action="/action_page.php"><input type="text" id="Message" name="Enter your message" 
                 value="Enter your message">
             </form>
+            <form action="/action_page.php"><input type="radio"> I am a human</form>
         </form-category>
 
 
