added input submit for send message

--- a/Index.html
+++ b/Index.html
@@ -139,6 +139,7 @@
             </form>
             <form action="/action_page.php"><input type="radio"> I am a human</form>
         </form-category>
+            <form action="/action_page.php"><input type="submit" value="send message"></form>
 
 
     </body>
