added Bottom page with lists

--- a/Index.html
+++ b/Index.html
@@ -138,8 +138,33 @@
                 value="Enter your message">
             </form>
             <form action="/action_page.php"><input type="radio"> I am a human</form>
-        </form-category>
             <form action="/action_page.php"><input type="submit" value="send message"></form>
+        </form-category>
+        <bottom>
+            <p><strong>Products</strong></p>
+                <ul>
+                    <li>Features</li>
+                    <li>Downloads</li>
+                    <li>Integratios</li>
+                    <li>Extras</li>
+                </ul>
+            <p><strong>Company</strong></p>
+                <ul>
+                    <li>About us</li>
+                    <li>Customers</li>
+                    <li>Resources</li>
+                    <li>Blog</li>
+                </ul>
+             <p><strong>Support</strong></p>
+                <ul>
+                    <li>Help</li>
+                    <li>Tutorials</li>
+                    <li>API</li>
+                    <li>Contact</li>
+                </ul>
+
+
+        </bottom>
 
 
     </body>
