added previous and next button

--- a/Index.html
+++ b/Index.html
@@ -162,7 +162,16 @@
                     <li>API</li>
                     <li>Contact</li>
                 </ul>
-
+            <div><button>Prev</button>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>...</button>
+                <button>8</button>
+                <button>9</button>
+                <button>10</button>
+                <button>Next</button>
+            </div>
 
         </bottom>
 
