added footer with copyright

--- a/Index.html
+++ b/Index.html
@@ -172,9 +172,13 @@
                 <button>10</button>
                 <button>Next</button>
             </div>
-
         </bottom>
-
-
+        <footer>
+            <P><a href="https://www.facebook.com/">FB</a> <a href="https://twitter.com/">TW</a> 
+                <a href="https://www.linkedin.com/">LK</a> <a href="https://www.instagram.com/">IG</a> 
+                <a href="https://github.com/">GH</a>
+            </P>
+            <p>Copyright</p>
+        </footer>
     </body>
 </html>
